2010-02-25 Holger Vogt
 * inpcom.c, general.h, mystring.c, numparam.h, spicenum.c, xpressn.c, 
   include/makefile.am, misc/makefile.am, hash.c, hash.h:
   major bug-fix on numparam by Bill Swartz
 * subckt.c: bugfix on bxx_printf()
 * inp.c memory leak, line 707 wl_free(wl); added
 * ifeval.c, inpptree.c, inpptree.h: first try of ternary fcn in B source
   by Robert Larice
 * vngspice.sln, vngspice.vcproj: new files hash.c, .h added to project

2010-02-22 Dietmar Warning
 * xpressn.c, spicenum.c: more characters for real number insertion (up to 15) by 
   introducing a long long placeholder

2010-02-21 Dietmar Warning
 * /devices/bsim3soi/*.*: bsimsoi update to Berkeley Version 4.3

2010-02-15 Holger Vogt
 * getopt_bsd.h, resask.c, optionssc.c: LF line endings
 * evttermi.c: #include <strings.h> removed (is in ngspice.h)
 * wdisp/makedefs, visualc/include/strings.h: removed

2010-02-13 Holger Vogt
 * icm/dllmain.c, evtload.c, ngspice.h, terminal.c, evaluate.c, twomesh.c, 
   tclspice.c, conf.h, conf.c: patches by R. Larice 100213
 * K&R -> ANSI patches by R. Larice 100103
 
2010-02-11 Holger Vogt
 * terminal.h, cpextern.h: use format (__printf__, 1, 2)
 * pzan.c, nipzmeth.c, cktpzstr.c, macros.h: remove conflicting macro definition
  (MS Visual Studio) ERROR -> MERROR 
 
2010-02-08 Holger Vogt
 * com_sysinfo.c: 64 bit support enabled
 * terminal.c, terminal.h, cpextern.h, ngsconvert.c, inpgmod.c, ipcsockets.c: patches by
   R. Larice from Feb. 8th, 2010

2010-02-07 Dietmar Warning
 * cpl/cplload.c, cplsetup.c, /txl/txlload.c, txlsetup.c, include/swec.h, multi_line.h,
   frontend/subckt.c, parser/inp2p.c, inppas2.c: no more float's, improve dc solution by 
   introducing gmin deembedding, better model check, automatic maxStep adaption in tran
   analysis, correct handling of kspice models in subckt's, kspice models are working now
   more stable but accuracy in steady state of transient is not sufficient 
 * examples/TransmissionLines/*.sp: ommit itl5-warning