@@ -78,6 +78,9 @@ VSRCask(CKTcircuit *ckt, GENinstance *inst, int which, IFvalue *value, IFvalue *
         case VSRC_R:
             value->rValue = here->VSRCr;
             return (OK);
+        case VSRC_TD:
+            value->rValue = here->VSRCrdelay;
+            return (OK);
         case VSRC_FCN_ORDER:
             value->rValue = here->VSRCfunctionOrder;
             return (OK);
